css/style.css
@tailwind base;

@tailwind components;

@tailwind utilities;

@layer components {
  /* this is the start of navbar css */
  nav {
    min-height: 8vh;
    @apply flex  justify-around bg-gray-800 items-center;
  }

  .logo {
    font-family: "Londrina Outline", cursive;
    animation: glow 1s ease-in-out infinite alternate;
    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #0073e6, 0 0 20px #0073e6,
      0 0 25px #0073e6, 0 0 30px #0073e6, 0 0 35px #0073e6;
    @apply text-blue-100 uppercase tracking-widest text-xl sm:text-3xl font-bold;
  }

  .nav-links {
    width: 50%;
    font-family: "Jockey One", cursive;
    @apply flex mx-0 text-gray-300;
  }

  .nav-links li {
    padding-top: 20px;
    padding-right: 20px;
    padding-bottom: 20px;
    padding-left: 20px;
    @apply list-none hover:bg-gray-300 hover:text-gray-800 text-center cursor-pointer;
  }

  .nav-links .active {
    @apply bg-gray-300 text-gray-800;
  }

  .nav-links a {
    @apply no-underline tracking-wider font-medium text-2xl;
  }

  .burger {
    display: none;
  }

  .burger div {
    width: 25px;
    height: 3px;
    background-color: white;
    margin: 5px;
    transition: all 0.3s ease;
  }

  @media screen and (max-width: 1024px) {
    .nav-links {
      width: 60%;
      right: 0px;
      min-height: 92vh;
      top: 8vh;
      width: 50%;
      transform: translateX(100%);
      transition: transform 0.5s ease-in;

      @apply bg-gray-800 absolute flex flex-col items-stretch z-50;
    }

    .nav-links li {
      opacity: 0;
      @apply hover:bg-gray-300 text-center;
    }

    .burger {
      display: block;
      padding: 5px;
    }
  }

  .nav-active {
    transform: translateX(0%);
  }

  .toggle .line1 {
    transform: rotate(-45deg) translate(-5px, 6px);
  }

  .toggle .line2 {
    opacity: 0;
  }

  .toggle .line3 {
    transform: rotate(45deg) translate(-5px, -6px);
  }

  /* this is the end of  the navbar css */

  /*modal form for load start here */
  .main-modal-load {
    background: rgba(0, 0, 0, 0.7);
    @apply fixed w-full h-full inset-0 z-50 overflow-x-hidden
     hidden justify-center items-center animated fadeIn faster;
  }

  .modal-container-load {
    @apply border border-gray-500 bg-white w-11/12  mx-auto rounded z-50 max-h-full overflow-y-auto;
  }

  .modal-content-load {
    @apply py-4 px-6;
  }

  .load-tracks {
    @apply flex flex-col md:flex-row;
  }

  .load-header {
    @apply text-center font-semibold text-2xl;
  }

  .sample-tracks {
    @apply border rounded-xl m-auto p-5  w-11/12 md:w-2/5 shadow-2xl mt-5 md:mt-0;
  }

  .your-tracks {
    @apply border rounded-xl m-auto p-5 w-11/12  md:w-2/5 shadow-2xl;
  }

  .your-tracks-content {
    @apply flex flex-wrap m-auto;
  }
  .sample-tracks-content {
    @apply flex flex-wrap m-auto;
  }

  .track-load-style {
    @apply border-2 p-1 m-auto px-2 ml-1 my-1 rounded-lg cursor-pointer hover:bg-gray-200 active:bg-gray-400 shadow-inner;
  }

  .sample-load-style {
    @apply border-2 p-1 m-auto px-2 ml-1 my-1 rounded-lg cursor-pointer hover:bg-gray-200 active:bg-gray-400 shadow-inner;
  }

  /*modal form for load finish here */

  /*modal form for save start here */

  .form-container {
    @apply w-full p-5 mb-1 border-none hidden bg-gray-700;
  }

  .main-modal {
    background: rgba(0, 0, 0, 0.7);
    @apply fixed w-full h-full inset-0 z-50 overflow-hidden hidden justify-center items-center animated fadeIn faster;
  }

  .modal-container {
    @apply border border-gray-500  bg-white w-11/12 sm:max-w-md mx-auto rounded shadow-lg z-50 overflow-y-auto;
  }

  .modal-content {
    @apply py-4 text-left px-6;
  }

  .animated {
    -webkit-animation-duration: 1s;
    animation-duration: 1s;
    -webkit-animation-fill-mode: both;
    animation-fill-mode: both;
  }

  .animated.faster {
    -webkit-animation-duration: 500ms;
    animation-duration: 500ms;
  }

  .fadeIn {
    -webkit-animation-name: fadeIn;
    animation-name: fadeIn;
  }

  .fadeOut {
    -webkit-animation-name: fadeOut;
    animation-name: fadeOut;
  }

  @keyframes fadeIn {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }

  @keyframes fadeOut {
    from {
      opacity: 1;
    }

    to {
      opacity: 0;
    }
  }

  #saved-name {
    @apply bg-gray-200 border-gray-400 p-3 rounded-lg ring-1 ring-gray-600 focus:outline-none focus:ring-2 focus:ring-gray-900 focus:bg-gray-100;
  }

  #save-btn-form {
    @apply bg-green-200 mt-3 border-gray-600 p-3 rounded-lg ring-1 ring-gray-600 focus:outline-none focus:ring-2 focus:ring-gray-900
    hover:bg-green-400 active:bg-green-600 active:text-white;
  }

  .saving-error {
    @apply hidden text-white text-xl font-normal bg-red-600 rounded-xl pl-4 py-1;
  }

  /*modal form for save finish here */

  /* animation for navbar css start*/
  @keyframes navLinkFade {
    from {
      opacity: 0;
      transform: translateX(50px);
    }

    to {
      opacity: 1;
      transform: translateX(0px);
    }
  }

  @keyframes glow {
    from {
      text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #0073e6,
        0 0 20px #0073e6, 0 0 25px #0073e6, 0 0 30px #0073e6, 0 0 35px #0073e6;
    }
    to {
      text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #0073e6,
        0 0 40px #0073e6, 0 0 50px #0073e6, 0 0 60px #0073e6, 0 0 70px #0073e6;
    }
  }

  /* animation for navbar css stop */

  #beat-section {
    @apply bg-red-50;
  }

  .beat-container {
    min-height: 100vh;
    @apply flex justify-center items-center flex-col;
  }

  i,
  svg {
    @apply pointer-events-none;
  }

  /* /// © 2021 dev-aly3n /// */
  .kick-pad,
  .snare-pad,
  .hihat-pad,
  .clap-pad,
  .effect-pad {
    @apply w-7 h-16 mx-1 lg:mx-2 my-2 cursor-pointer;
  }

  .kick-pad {
    @apply bg-red-200;
  }

  .snare-pad {
    @apply bg-yellow-200;
  }

  .hihat-pad {
    @apply bg-green-200;
  }

  .clap-pad {
    @apply bg-blue-200;
  }

  .effect-pad {
    @apply bg-purple-200;
  }

  .kick-pad.active {
    @apply bg-red-500;
  }
  .snare-pad.active {
    @apply bg-yellow-500;
  }
  .hihat-pad.active {
    @apply bg-green-500;
  }

  .clap-pad.active {
    @apply bg-blue-500;
  }

  .effect-pad.active {
    @apply bg-purple-500;
  }

  .kick-track,
  .snare-track,
  .hihat-track,
  .clap-track,
  .effect-track {
    @apply flex flex-col lg:flex-row items-center w-full justify-between py-4;
  }

  .kick-track {
    @apply bg-red-50;
  }
  .snare-track {
    @apply bg-yellow-50;
  }
  .hihat-track {
    @apply bg-green-50;
  }
  .clap-track {
    @apply bg-blue-50;
  }
  .effect-track {
    @apply bg-purple-50;
  }

  .kick,
  .snare,
  .hihat,
  .clap,
  .effect {
    @apply flex w-4/5  justify-center;
  }

  .controls {
    @apply flex justify-between items-center w-72 ml-4 lg:ml-64;
  }

  h2 {
    @apply text-3xl font-bold w-24 text-center;
  }

  .pad {
    transition: all 0.5s easee;
    @apply shadow-inner
  }

  .controls button {
    transition: all 0.5s ease;
    @apply px-3 py-2 mx-2 border-none bg-gray-600 text-white text-base cursor-pointer active:bg-gray-900
    shadow-2xl active:shadow-inner;
  }

  .general-controls {
    @apply flex flex-col;
  }

  .general-controls .play,
  .randomize-all,
  .save,
  .load,
  .clear-all {
    @apply bg-gray-600 text-white py-4 px-8 mt-6 text-2xl border-none active:bg-gray-900
    shadow-2xl active:shadow-inner mx-2;
  }

  .general-controls .increase {
    @apply bg-green-400 text-white py-2 w-12 text-2xl rounded-full border-none active:bg-green-900
    shadow-2xl active:shadow-inner ring-1 ring-green-600 focus:outline-none focus:ring-2 focus:ring-green-600;
  }

  .general-controls .decrease {
    @apply bg-yellow-500 text-white ml-4 py-2 w-12 text-2xl rounded-full border-none active:bg-yellow-900
    shadow-2xl active:shadow-inner ring-1 ring-yellow-600 focus:outline-none focus:ring-2 focus:ring-yellow-600;
  }

  select {
    @apply px-2 py-2 font-semibold w-24 bg-gray-50 border;
  }

  .mute.active {
    @apply bg-gray-300 text-black;
  }

  .tempo {
    @apply m-4 w-1/3;
  }

  .tempo-slider {
    -webkit-appearance: none;
    @apply bg-gray-600 p-1 mt-1 w-full relative cursor-pointer rounded-xl focus:outline-none focus:ring-2 focus:ring-green-500;
  }
  .tempo p {
    @apply text-2xl m-3 text-center font-medium;
  }

  @keyframes boomBoom {
    from {
      transform: scale(1);
    }
    to {
      transform: scale(1.2);
    }
  }
/* /// © 2021 dev-aly3n /// */
}

/* .{

} */

